--- a/gallery.html
+++ b/gallery.html
@@ -2,323 +2,119 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jack Simm – Product Designer</title>
-  <script src="https://unpkg.com/feather-icons"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gallery</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-      background: #d7e5db;
-      color: #333;
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
     }
 
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 40px;
-      font-weight: 600;
-      font-size: 1.1rem;
+    .gallery-section {
+      padding: 40px 20px;
+      background-color: #f5f5f5;
     }
 
-    .left {
-      cursor: pointer;
-      font-size: 1.2rem;
-      padding: 10px;
-    }
-
-    .dropdown {
-      position: absolute;
-      top: 60px;
-      left: 40px;
-      background: white;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      border-radius: 6px;
-      display: none;
-      flex-direction: column;
-      z-index: 10;
-    }
-
-    .dropdown a {
-      padding: 12px 20px;
-      text-decoration: none;
+    .gallery-section h2 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 30px;
       color: #222;
-      font-weight: 500;
     }
 
-    .banner-section {
-      width: 100%;
-      height: 120vh;
+    .gallery-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 15px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .gallery-item {
+      display: block;
       overflow: hidden;
-      position: relative;
+      border-radius: 10px;
+      cursor: zoom-in;
     }
 
-    .banner-img {
+    .gallery-item img {
       width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
+      height: auto;
+      display: block;
+      transition: transform 0.3s ease;
+      border-radius: 10px;
     }
 
-    .profile-overlay {
-      position: absolute;
-      bottom: 60px;
-      left: 50px;
-      background: rgba(0, 0, 0, 0.75);
-      padding: 25px 40px;
-      border-radius: 20px;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      width: 550px;
-      max-width: 90%;
-      gap: 20px;
+    .gallery-item:hover img {
+      transform: scale(1.08);
     }
 
-    .profile-pic {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      object-fit: cover;
-      filter: grayscale(100%);
-      border: 3px solid white;
-    }
-
-    .titles {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
-    }
-
-    .titles h2 {
-      color: white;
-      margin: 4px 0;
-      font-size: 1.4rem;
-      text-align: left;
-    }
-
-    .mobile-profile {
+    /* Lightbox Styles */
+    .lightbox {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(0, 0, 0, 0.85);
       display: none;
-      background: rgba(0, 0, 0, 0.75);
-      text-align: center;
-      padding: 15px;
-      margin: 20px 16px;
-      border-radius: 16px;
-      max-width: 400px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .mobile-profile img {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      object-fit: cover;
-      filter: grayscale(100%);
-      border: 3px solid white;
-      margin-bottom: 12px;
-    }
-
-    .mobile-profile h2 {
-      color: white;
-      margin: 5px 0;
-      font-size: 1.2rem;
-    }
-
-    .container {
-      max-width: 1100px;
-      background: white;
-      border-radius: 16px;
-      padding: 60px;
-      margin: 60px auto;
-    }
-
-    h3 {
-      font-size: 1.6rem;
-      margin-bottom: 12px;
-      font-weight: 600;
-      color: #222;
-    }
-
-    .row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 60px;
-    }
-
-    .column {
-      flex: 1;
-      min-width: 300px;
-    }
-
-    ul {
-      padding-left: 20px;
-    }
-
-    ul li {
-      margin-bottom: 10px;
-    }
-
-    .contact-section {
-      text-align: center;
-      margin-bottom: 40px;
-    }
-
-    .contact-links a {
-      color: #222;
-      text-decoration: none;
-      margin: 0 15px;
-      display: inline-flex;
+      justify-content: center;
       align-items: center;
-      font-weight: 600;
-      padding: 12px 0;
+      z-index: 1000;
     }
 
-    .contact-links i,
-    .contact-links svg {
-      width: 20px;
-      height: 20px;
-      margin-right: 8px;
-      stroke: #222;
-    }
-
-    .contact-links a:hover svg {
-      stroke: #333;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9rem;
-      color: #666;
-    }
-
-    @media (max-width: 768px) {
-      .profile-overlay {
-        display: none;
-      }
-
-      .mobile-profile {
-        display: block;
-      }
-
-      .container {
-        padding: 20px;
-        margin: 30px auto;
-      }
-
-      .contact-links a {
-        display: block;
-        margin: 12px auto;
-      }
-
-      .banner-section {
-        height: 70vh;
-      }
-
-      .titles h2 {
-        font-size: 1.1rem;
-      }
+    .lightbox img {
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 10px;
+      cursor: zoom-out;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
     }
   </style>
 </head>
 <body>
-  <header>
-    <div class="left" onclick="toggleDropdown()">≡ Jack Simm</div>
-    <div class="dropdown" id="dropdownMenu">
-      <a href="projects.html">Projects</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="cv.html">CV</a>
+
+  <section class="gallery-section">
+    <h2>Gallery</h2>
+    <div class="gallery-grid">
+      <a href="IMG_5565.JPG" class="gallery-item"><img src="IMG_5565.JPG" alt="Gallery Image 1" /></a>
+      <a href="IMG_5566.JPG" class="gallery-item"><img src="IMG_5566.JPG" alt="Gallery Image 2" /></a>
+      <a href="IMG_5567.JPG" class="gallery-item"><img src="IMG_5567.JPG" alt="Gallery Image 3" /></a>
+      <a href="IMG_5568.JPG" class="gallery-item"><img src="IMG_5568.JPG" alt="Gallery Image 4" /></a>
+      <a href="IMG_5569.JPG" class="gallery-item"><img src="IMG_5569.JPG" alt="Gallery Image 5" /></a>
+      <a href="IMG_5570.JPG" class="gallery-item"><img src="IMG_5570.JPG" alt="Gallery Image 6" /></a>
+      <a href="IMG_5571.JPG" class="gallery-item"><img src="IMG_5571.JPG" alt="Gallery Image 7" /></a>
+      <a href="IMG_5572.JPG" class="gallery-item"><img src="IMG_5572.JPG" alt="Gallery Image 8" /></a>
+      <a href="Exploded Organiser.32.jpg" class="gallery-item"><img src="Exploded Organiser.32.jpg" alt="Exploded Organiser 1" /></a>
+      <a href="untitled.31.jpg" class="gallery-item"><img src="untitled.31.jpg" alt="Exploded Organiser 2" /></a>
     </div>
-  </header>
+  </section>
 
-  <div class="banner-section">
-    <img src="IMG_5572.JPG" alt="Banner Image of Jack Simm" class="banner-img" loading="lazy" />
-    <div class="profile-overlay">
-      <img src="profile.jpg" alt="Portrait of Jack Simm" class="profile-pic" />
-      <div class="titles">
-        <h2>Product Designer</h2>
-        <h2>Product Development Manager</h2>
-      </div>
-    </div>
+  <!-- Lightbox Container -->
+  <div id="lightbox" class="lightbox">
+    <img id="lightbox-img" src="" alt="Enlarged view" />
   </div>
-
-  <div class="mobile-profile">
-    <img src="profile.jpg" alt="Jack Simm" loading="lazy" />
-    <h2>Product Designer</h2>
-    <h2>Product Development Manager</h2>
-  </div>
-
-  <div class="container">
-    <div class="row">
-      <div class="column">
-        <h3>About Me</h3>
-        <p>
-          I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions. My experience includes leading design teams, improving operations, and managing projects in fast-paced environments.
-        </p>
-      </div>
-      <div class="column">
-        <h3>Experience</h3>
-        <ul>
-          <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
-          <li><strong>Kaizen Team</strong> – Unipres UK (2022–2023)</li>
-          <li><strong>Cost Planning</strong> – Unipres UK (2021–2022)</li>
-          <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
-        </ul>
-
-        <h3 style="margin-top: 30px;">Skills</h3>
-        <ul>
-          <li><strong>CAD Modelling</strong> (SolidWorks, Shapr3D)</li>
-          <li><strong>Adobe Suite</strong> (Photoshop, Illustrator, InDesign)</li>
-          <li><strong>Rapid Prototyping</strong></li>
-          <li><strong>User-Centred Design</strong></li>
-          <li><strong>Production Coordination</strong></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-
-  <div class="contact-section">
-    <h3>Contact Me</h3>
-    <div class="contact-links">
-      <a href="mailto:jack.simm.design@gmail.com">
-        <i data-feather="mail"></i> Email Me
-      </a>
-      <a href="https://www.instagram.com/jack_simm_design" target="_blank">
-        <i data-feather="instagram"></i> Instagram
-      </a>
-    </div>
-  </div>
-
-  <footer>&copy; 2025 Jack Simm – Portfolio</footer>
 
   <script>
-    const toggle = document.querySelector(".left");
-    const menu = document.getElementById("dropdownMenu");
+    const lightbox = document.getElementById('lightbox');
+    const lightboxImg = document.getElementById('lightbox-img');
+    const galleryItems = document.querySelectorAll('.gallery-item');
 
-    toggle.addEventListener("mouseenter", () => {
-      menu.style.display = "flex";
+    galleryItems.forEach(item => {
+      item.addEventListener('click', function(e) {
+        e.preventDefault();
+        const imgSrc = this.querySelector('img').src;
+        lightboxImg.src = imgSrc;
+        lightbox.style.display = 'flex';
+      });
     });
 
-    toggle.addEventListener("mouseleave", () => {
-      setTimeout(() => {
-        if (!menu.matches(":hover")) menu.style.display = "none";
-      }, 200);
+    lightbox.addEventListener('click', () => {
+      lightbox.style.display = 'none';
+      lightboxImg.src = '';
     });
-
-    menu.addEventListener("mouseleave", () => {
-      menu.style.display = "none";
-    });
-
-    toggle.addEventListener("click", () => {
-      const isVisible = menu.style.display === "flex";
-      menu.style.display = isVisible ? "none" : "flex";
-    });
-
-    // Feather icons init
-    feather.replace();
   </script>
+
 </body>
 </html>
