--- a/projects.html
+++ b/projects.html
@@ -5,12 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Projects – Jack Simm</title>
   <style>
+    :root {
+      --bg: #ffffff;
+      --text: #1c1c1c;
+      --accent: #f5f5f7;
+      --shadow: rgba(0, 0, 0, 0.1);
+    }
+
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-      background-color: #ffffff;
-      color: #1c1c1c; /* Default body text color */
-      font-size: 17px;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background-color: var(--bg);
+      color: var(--text);
+      font-size: clamp(1rem, 1.2vw, 1.1rem);
       line-height: 1.6;
     }
 
@@ -19,9 +26,10 @@
       justify-content: space-between;
       align-items: center;
       padding: 20px 40px;
-      background-color: #1c1c1c; /* Exact homepage banner shade */
+      background-color: #1c1c1c;
+      color: #eee;
       font-weight: 600;
-      color: #eee; /* Light text consistent with homepage */
+      font-size: 1.1rem;
     }
 
     .left {
@@ -33,56 +41,72 @@
       top: 60px;
       left: 40px;
       background: #2a2a2a;
-      border-radius: 6px;
+      border-radius: 8px;
       display: none;
       flex-direction: column;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
       z-index: 10;
     }
 
     .dropdown a {
-      padding: 12px 20px;
+      padding: 14px 24px;
       text-decoration: none;
       color: #eee;
       font-weight: 500;
-      font-size: 1rem;
     }
 
     .dropdown a:hover {
-      background: #383838;
+      background-color: #383838;
     }
 
     .container {
       max-width: 1200px;
-      margin: 60px auto;
+      margin: 80px auto;
       padding: 0 30px;
-      text-align: center;
     }
 
     h1 {
-      font-size: 2.5rem;
+      text-align: center;
+      font-size: clamp(2rem, 4vw, 3rem);
       margin-bottom: 60px;
-      color: #1c1c1c;
+      color: #111;
+      font-weight: 600;
+      letter-spacing: -0.5px;
+    }
+
+    .project-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 40px;
     }
 
     .project img {
       width: 100%;
-      max-width: 800px;
-      margin-bottom: 50px;
-      border-radius: 10px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
-      transition: transform 0.3s ease;
+      border-radius: 14px;
+      box-shadow: 0 10px 30px var(--shadow);
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
     }
 
     .project img:hover {
-      transform: scale(1.02);
+      transform: scale(1.015);
+      box-shadow: 0 14px 40px rgba(0, 0, 0, 0.15);
     }
 
     footer {
       text-align: center;
-      padding: 40px;
+      padding: 60px 20px;
       font-size: 0.9rem;
-      color: #666;
+      color: #999;
+    }
+
+    @media (max-width: 600px) {
+      .container {
+        padding: 0 16px;
+      }
+
+      header {
+        padding: 20px;
+      }
     }
   </style>
 </head>
@@ -95,14 +119,18 @@
       <a href="gallery.html">Gallery</a>
       <a href="cv.html">CV</a>
     </div>
-    <div class="right"></div>
   </header>
 
   <div class="container">
     <h1>Projects</h1>
-    <div class="project">
-      <img src="Exploded Organiser.32.jpg" alt="Exploded Organiser View" />
-      <img src="untitled.31.jpg" alt="Exploded Organiser View 2" />
+    <div class="project-grid">
+      <div class="project">
+        <img src="Exploded Organiser.32.jpg" alt="Exploded Organiser View" />
+      </div>
+      <div class="project">
+        <img src="untitled.31.jpg" alt="Exploded Organiser View 2" />
+      </div>
+      <!-- Add more projects as needed -->
     </div>
   </div>
 
@@ -114,24 +142,16 @@
     const toggle = document.querySelector(".left");
     const menu = document.getElementById("dropdownMenu");
 
-    toggle.addEventListener("mouseenter", () => {
-      menu.style.display = "flex";
-    });
-
-    toggle.addEventListener("mouseleave", () => {
-      setTimeout(() => {
-        if (!menu.matches(":hover")) menu.style.display = "none";
-      }, 200);
-    });
-
-    menu.addEventListener("mouseleave", () => {
-      menu.style.display = "none";
-    });
-
     toggle.addEventListener("click", () => {
-      const isVisible = menu.style.display === "flex";
-      menu.style.display = isVisible ? "none" : "flex";
+      menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+    });
+
+    document.addEventListener("click", (e) => {
+      if (!menu.contains(e.target) && e.target !== toggle) {
+        menu.style.display = "none";
+      }
     });
   </script>
+
 </body>
 </html>
