--- a/index.html
+++ b/index.html
@@ -2,164 +2,254 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CV – Jack Simm</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jack Simm – Product Designer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/feather-icons"></script>
   <style>
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #ffffff;
-      color: #1c1c1c;
-      font-size: 16px;
-      line-height: 1.6;
+      background-color: #f5f5f7;
+      color: #1c1c1e;
     }
 
-    /* Header */
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px 40px;
-      background-color: #1c1c1c;
-      color: #eee;
-      font-weight: 600;
+      padding: 24px 64px;
+      background-color: white;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.05);
     }
 
     .left {
+      font-size: 1.3rem;
+      font-weight: 600;
+      color: #000;
       cursor: pointer;
-      font-size: 1.2rem;
     }
 
     .dropdown {
       position: absolute;
-      top: 60px;
-      left: 40px;
-      background: #2a2a2a;
-      border-radius: 6px;
+      top: 80px;
+      left: 64px;
+      background: white;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      border-radius: 8px;
       display: none;
       flex-direction: column;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-      z-index: 10;
     }
 
     .dropdown a {
-      padding: 12px 20px;
+      padding: 14px 20px;
       text-decoration: none;
-      color: #eee;
+      color: #1c1c1e;
       font-weight: 500;
-      font-size: 1rem;
     }
 
     .dropdown a:hover {
-      background: #383838;
+      background-color: #f0f0f0;
     }
 
-    /* About & Skills Section */
-    .about-skills {
-      max-width: 1000px;
+    .banner-section {
+      position: relative;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    .slide {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      opacity: 0;
+      transition: opacity 4s ease-in-out;
+    }
+
+    .slide.active {
+      opacity: 1;
+      z-index: 1;
+    }
+
+    .profile-overlay {
+      position: absolute;
+      bottom: 80px;
+      left: 80px;
+      background: rgba(255, 255, 255, 0.9);
+      padding: 30px 50px;
+      border-radius: 16px;
+      display: flex;
+      align-items: center;
+      gap: 24px;
+      max-width: 600px;
+      z-index: 2;
+    }
+
+    .profile-pic {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      filter: grayscale(100%);
+      border: 2px solid #000;
+    }
+
+    .titles h2 {
+      margin: 4px 0;
+      font-weight: 600;
+      font-size: 1.25rem;
+    }
+
+    .container {
+      max-width: 1100px;
       margin: 80px auto;
-      padding: 0 24px;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
+      padding: 0 40px;
+    }
+
+    .row {
+      display: flex;
+      flex-wrap: wrap;
       gap: 60px;
-      align-items: start;
     }
 
-    .about, .skills {
-      background-color: #f8f8f8;
-      padding: 40px;
-      border-radius: 14px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.06);
-      transition: box-shadow 0.3s ease;
+    .column {
+      flex: 1;
+      min-width: 300px;
     }
 
-    .about:hover, .skills:hover {
-      box-shadow: 0 12px 32px rgba(0, 0, 0, 0.08);
-    }
-
-    .about h2, .skills h2 {
-      font-size: 1.8rem;
-      margin-bottom: 20px;
-      color: #1c1c1c;
-    }
-
-    .about p {
-      font-size: 1rem;
-      line-height: 1.6;
-      color: #333;
-    }
-
-    .skills ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    .skills li {
-      background-color: #eaeaea;
-      padding: 10px 16px;
-      border-radius: 8px;
+    h3 {
+      font-size: 1.6rem;
       margin-bottom: 12px;
-      font-size: 0.95rem;
-      color: #1c1c1c;
+      font-weight: 600;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    ul li {
+      margin-bottom: 10px;
+    }
+
+    .contact-section {
+      text-align: center;
+      margin-top: 100px;
+    }
+
+    .contact-links {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      margin-top: 20px;
+    }
+
+    .contact-links a {
+      color: #1c1c1e;
+      text-decoration: none;
+    }
+
+    .contact-links i,
+    .contact-links svg {
+      width: 28px;
+      height: 28px;
+      stroke: #1c1c1e;
     }
 
     footer {
       text-align: center;
       padding: 40px;
       font-size: 0.9rem;
-      color: #666;
+      color: #888;
     }
 
     @media (max-width: 768px) {
-      .about-skills {
-        grid-template-columns: 1fr;
+      header {
+        padding: 20px;
+      }
+      .profile-overlay {
+        left: 20px;
+        right: 20px;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 20px;
+      }
+      .titles h2 {
+        font-size: 1rem;
       }
     }
   </style>
 </head>
 <body>
-
-  <!-- Header -->
   <header>
     <div class="left" onclick="toggleDropdown()">≡ Jack Simm</div>
     <div class="dropdown" id="dropdownMenu">
-      <a href="index.html">Home</a>
-      <a href="gallery.html">Gallery</a>
       <a href="projects.html">Projects</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="cv.html">CV</a>
     </div>
-    <div class="right"></div>
   </header>
 
-  <!-- About + Skills -->
-  <div class="about-skills">
-    <div class="about">
-      <h2>About Me</h2>
-      <p>
-        I'm Jack Simm, a designer passionate about creating sleek digital and physical experiences. I combine creativity with precision, blending user-focused design with modern materials and advanced prototyping.
-      </p>
-    </div>
+  <div class="banner-section">
+    <img src="Exploded Organiser.32.jpg" alt="Render 1" class="slide active" />
+    <img src="untitled.31.jpg" alt="Render 2" class="slide" />
+    <img src="untitled.34.jpg" alt="Render 3" class="slide" />
+    <img src="untitled.36.jpg" alt="Render 4" class="slide" />
+    <img src="untitled.37.jpg" alt="Render 5" class="slide" />
 
-    <div class="skills">
-      <h2>Skills</h2>
-      <ul>
-        <li>3D Modeling (Shapr3D, Fusion 360)</li>
-        <li>Rendering (KeyShot)</li>
-        <li>Web Design (HTML, CSS, JavaScript)</li>
-        <li>Prototyping & Manufacturing</li>
-        <li>User Experience Research</li>
-      </ul>
+    <div class="profile-overlay">
+      <img src="profile.jpg" alt="Portrait of Jack Simm" class="profile-pic" />
+      <div class="titles">
+        <h2>Jack Simm</h2>
+        <h2>Product Designer</h2>
+        <h2>Product Development Manager</h2>
+      </div>
     </div>
   </div>
 
-  <!-- Footer -->
-  <footer>
-    &copy; 2025 Jack Simm – Portfolio
-  </footer>
+  <div class="container">
+    <div class="row">
+      <div class="column">
+        <h3>About Me</h3>
+        <p>I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions.</p>
+      </div>
+      <div class="column">
+        <h3>Experience</h3>
+        <ul>
+          <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
+          <li><strong>Kaizen Team</strong> – Unipres UK (2022–2023)</li>
+          <li><strong>Cost Planning</strong> – Unipres UK (2021–2022)</li>
+          <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
+        </ul>
+        <h3>Skills</h3>
+        <ul>
+          <li><strong>CAD Modelling</strong> (SolidWorks, Shapr3D)</li>
+          <li><strong>Adobe Suite</strong> (Photoshop, Illustrator, InDesign)</li>
+          <li><strong>Rapid Prototyping</strong></li>
+          <li><strong>User-Centred Design</strong></li>
+          <li><strong>Production Coordination</strong></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
-  <!-- Dropdown Script -->
+  <div class="contact-section">
+    <h3>Contact Me</h3>
+    <div class="contact-links">
+      <a href="mailto:jack.simm.design@gmail.com" aria-label="Email Jack Simm">
+        <i data-feather="mail"></i>
+      </a>
+      <a href="https://www.instagram.com/jack_simm_design" target="_blank" aria-label="Instagram">
+        <i data-feather="instagram"></i>
+      </a>
+    </div>
+  </div>
+
+  <footer>&copy; 2025 Jack Simm – Portfolio</footer>
+
   <script>
     const toggle = document.querySelector(".left");
     const menu = document.getElementById("dropdownMenu");
@@ -168,12 +258,16 @@
       menu.style.display = menu.style.display === "flex" ? "none" : "flex";
     });
 
-    document.addEventListener("click", (e) => {
-      if (!toggle.contains(e.target) && !menu.contains(e.target)) {
-        menu.style.display = "none";
-      }
-    });
-  </script>
+    const slides = document.querySelectorAll('.slide');
+    let current = 0;
 
+    setInterval(() => {
+      slides[current].classList.remove('active');
+      current = (current + 1) % slides.length;
+      slides[current].classList.add('active');
+    }, 10000);
+
+    feather.replace();
+  </script>
 </body>
 </html>
